--- a/hthci-website/src/component/NavBar.css
+++ b/hthci-website/src/component/NavBar.css
@@ -1,3 +1,10 @@
+html,body{
+    min-width: 100%;
+    min-height: 100%;
+    overflow-x: hidden;
+    padding: 0;
+    margin: 0;
+}/*horizontal scroll fix*/
 
 .navbar {
   background: #eeeaea;
