--- a/hthci-website/src/index.css
+++ b/hthci-website/src/index.css
@@ -1,5 +1,8 @@
 
-
+html,body{
+    min-width: 100%;
+    overflow-x: hidden;
+}/*horizontal scroll fix*/
 
 /*////////////////HOME////////////////*/
 
