--- a/hthci-website/src/views/App.css
+++ b/hthci-website/src/views/App.css
@@ -1,7 +1,10 @@
-¡
+
 html,body{
     min-width: 100%;
+    min-height: 100%;
     overflow-x: hidden;
+    padding: 0;
+    margin: 0;
 }/*horizontal scroll fix*/
 
 * {
